@@ -1,0 +1,42 @@
+<?php
+
+/*
+ * LMS version 1.11-git
+ *
+ *  (C) Copyright 2001-2012 LMS Developers
+ *
+ *  This program is free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License Version 2 as
+ *  published by the Free Software Foundation.
+ *
+ *  This program is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with this program; if not, write to the Free Software
+ *  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307,
+ *  USA.
+ *
+ */
+
+$DB->BeginTrans();
+
+$DB->Execute("
+	CREATE SEQUENCE managementurls_id_seq;
+	CREATE TABLE managementurls (
+		id integer		DEFAULT nextval('managementurls_id_seq'::text) NOT NULL,
+		netdevid integer	NOT NULL
+			REFERENCES netdevices (id) ON DELETE CASCADE ON UPDATE CASCADE,
+		url text		DEFAULT '' NOT NULL,
+		comment varchar(100)	DEFAULT NULL,
+		PRIMARY KEY (id)
+	);
+");
+
+$DB->Execute("UPDATE dbinfo SET keyvalue = ? WHERE keytype = ?", array('2012041101', 'dbversion'));
+
+$DB->CommitTrans();
+
+?>
