@@ -1,0 +1,42 @@
+<TR class="dark">
+	<TD style="width: 1%; white-space: nowrap;" class="fleftu" COLSPAN="2">{trans("URL:")}</TD>
+	<TD style="width: 1%;" class="fbt">{trans("Comment:")}</TD>
+	<TD style="width: 98%;" class="frightu">&nbsp;</TD>
+</TR>
+{cycle name=locks values="light,lucid" print=false}
+{foreach from=$mgmurls item=mgmurl}
+<TR class="{cycle name=managementurls}" onmouseover="addClass(this, 'highlight')" onmouseout="removeClass(this, 'highlight')">
+	<TD style="width: 1%; white-space: nowrap;" COLSPAN="2">
+		<a href="{$mgmurl.url}" target="_blank">{$mgmurl.url}</a>
+	</TD>
+	<TD style="width: 1%; white-space: nowrap;">
+		{$mgmurl.comment}
+	</TD>
+	<TD style="width: 98%; text-align: right; white-space: nowrap;">
+		<A HREF="javascript:delManagementUrl({$mgmurl.id});"><IMG SRC="img/delete.gif" ALT="[ {trans("Delete")} ]" {tip text="Remove management URL"}></A>
+	</TD>
+</TR>
+{foreachelse}
+<TR>
+	<TD style="width: 100%; text-align: center;" colspan="4">
+		<p>&nbsp;</p>
+		<p><span class="bold">{trans("No management URL's.")}</span></p>
+		<p>&nbsp;</p>
+	</TD>
+</TR>
+{/foreach}
+<TR class="light">
+	<TD COLSPAN="2" CLASS="ftop" style="white-space: nowrap;">
+		<label for="url">{trans("URL:")}
+		<input size="80" name="url" id="url" value="" {tip text="Enter management URL" trigger="url"}>
+		</label>
+	</TD>
+	<TD CLASS="ftop" style="white-space: nowrap;">
+		<label for="comment">{trans("Comment:")}
+		<input size="40" name="comment" id="comment" value="" {tip text="Enter URL comment" trigger="comment"}>
+		</label>
+	</TD>
+	<TD style="text-align: right; white-space: nowrap;" CLASS="ftop" ROWSPAN="2">
+		<A id="managementurladdlink" HREF="javascript:addManagementUrl();" {tip text="Add new management URL"}>{trans("Add")} <IMG SRC="img/save.gif" alt=""></A>
+	</TD>
+</TR>
