@@ -1,0 +1,40 @@
+<!--// $Id: netdevmanagementurls.html,v 1.1 2012/04/11 23:01:40 chilek Exp $ //-->
+{$xajax}
+<TABLE style="width: 100%;" CELLPADDING="3">
+	<TR class="dark hand" onclick="showOrHide('managementurlspanel');">
+		<TD class="fall">
+			<IMG src="img/network.gif" alt="">
+			<span class="bold"><A name="managementurls">{trans("Management URL's:")}</A></span>
+		</TD>
+	</TR>
+	<TR id="managementurlspanel" style="display: none;">
+		<TD style="width: 100%;" class="fall">
+			<FORM id="managementurladd" name="managementurladd">
+			<TABLE style="width: 100%;" cellpadding="5" cellspacing="0" id="managementurltable">
+			</TABLE>
+			</FORM>
+		</TD>
+	</TR>
+</TABLE>
+<SCRIPT type="text/javascript">
+<!--
+if (getCookie('managementurlspanel') == '1')
+{
+	document.getElementById('managementurlspanel').style.display = '';
+}
+
+function addManagementUrl() {
+	if (xajax.$('url').value.length < 10)
+		return;
+	xajax.$('managementurladdlink').disabled = true;
+	xajax_addManagementUrl({$netdevinfo.id}, xajax.getFormValues('managementurladd'));
+}
+
+function delManagementUrl(id) {
+	xajax.$('managementurltable').disabled = true;
+	xajax_delManagementUrl({$netdevinfo.id}, id);
+}
+
+xajax_getManagementUrls({$netdevinfo.id});
+//-->
+</SCRIPT>
