@@ -12,6 +12,12 @@
 			{include file="netdevipbox.html"}
 		</TD>
 	</TR>
+	<TR>
+		<TD WIDTH="100%">
+			{include file="managementurls.html"}
+		</TD>
+	</TR>
+	<TR>
 		<TD WIDTH="100%">
 			{include file="netdevconnbox.html"}
 		</TD>
