@@ -1,24 +1,29 @@
 {include file="header.html"}
-<!--// $Id$ //-->
+<!--// $Id: netdevinfo.html,v 1.13 2008/01/19 19:56:45 alec Exp $ //-->
 <H1>{$layout.pagetitle}</H1>
-<TABLE WIDTH="100%" CELLPADDING="3">
+<TABLE style="width: 100%;" CELLPADDING="3">
 	<TR>
-		<TD WIDTH="100%">
+		<TD style="width: 100%;">
 			{include file="netdevinfobox.html"}
 		</TD>
 	</TR>
 	<TR>
-		<TD WIDTH="100%">
+		<TD style="width: 100%;">
 			{include file="netdevipbox.html"}
 		</TD>
 	</TR>
 	<TR>
-		<TD WIDTH="100%">
+		<TD style="width: 100%;">
+			{include file="managementurls.html"}
+		</TD>
+	</TR>
+	<TR>
+		<TD style="width: 100%;">
 			{include file="netdevconnbox.html"}
 		</TD>
 	<TR>
 	<TR>
-		<TD WIDTH="100%">
+		<TD style="width: 100%;">
 			{include file="netdevnodes.html"}
 		</TD>
 	</TR>
