@@ -19,6 +19,11 @@
 	</TR>
 	<TR>
 		<TD WIDTH="100%">
+			{include file="managementurls.html"}
+		</TD>
+	</TR>
+	<TR>
+		<TD WIDTH="100%">
 			{include file="netdevconnbox.html"}
 		</TD>
 	</TR>
