@@ -113,6 +113,7 @@ version ? (????-??-??):
   - liability reports are consistent with invoice/cash issues [chilan]
   - small fix for new PHP version [red]
   - fix validation data in domains for DKIM [red]
+  - added management urls for netdevices [chilan]
 
 version 1.11.13 Dira (2011-04-07)
 
